[gd_scene load_steps=7 format=3 uid="uid://dyqkdye22juad"]

[ext_resource type="Theme" uid="uid://bh1lb57wrjerg" path="res://resources/default_theme.tres" id="1_0jhnr"]
[ext_resource type="Script" path="res://scripts/controls_menu.gd" id="1_i6hww"]

[sub_resource type="LabelSettings" id="LabelSettings_w26wv"]
font_size = 32
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_pwy4f"]
font_size = 18
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_1asj6"]
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_ocqni"]
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[node name="ControlsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6hww")

[node name="ControlsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -168.0
offset_right = 196.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0jhnr")

[node name="MarginContainer" type="MarginContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsPanel/MarginContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CONTROLS"
label_settings = SubResource("LabelSettings_w26wv")
horizontal_alignment = 1

[node name="LeftInput" type="HBoxContainer" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer/LeftInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "LEFT"
label_settings = SubResource("LabelSettings_pwy4f")

[node name="LeftButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer/LeftInput"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "A"

[node name="RightInput" type="HBoxContainer" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer/RightInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "RIGHT"
label_settings = SubResource("LabelSettings_pwy4f")

[node name="RightButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer/RightInput"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "D"

[node name="JumpInput" type="HBoxContainer" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JumpLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer/JumpInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "JUMP"
label_settings = SubResource("LabelSettings_pwy4f")

[node name="JumpButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer/JumpInput"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SPACE"

[node name="PauseInput" type="HBoxContainer" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseLabel" type="Label" parent="ControlsPanel/MarginContainer/VBoxContainer/PauseInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "PAUSE"
label_settings = SubResource("LabelSettings_pwy4f")

[node name="PauseButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer/PauseInput"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ESCAPE"

[node name="ControlsCloseButton" type="Button" parent="ControlsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CLOSE"

[node name="InputPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -81.0
offset_right = 167.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0jhnr")

[node name="MarginContainer" type="MarginContainer" parent="InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="InputPanel/MarginContainer"]
layout_mode = 2

[node name="EnterInputLabel" type="Label" parent="InputPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENTER INPUT:"
label_settings = SubResource("LabelSettings_1asj6")
horizontal_alignment = 1

[node name="InputLabel" type="Label" parent="InputPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 47)
layout_mode = 2
label_settings = SubResource("LabelSettings_ocqni")
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="InputPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CONFIRM"

[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/LeftInput/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/RightInput/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/JumpInput/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/PauseInput/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="ControlsPanel/MarginContainer/VBoxContainer/ControlsCloseButton" to="." method="_on_controls_close_button_pressed"]
[connection signal="pressed" from="InputPanel/MarginContainer/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
